--- a/tetris.html
+++ b/tetris.html
@@ -22,7 +22,7 @@
            const BLOCK_SIZE = 30;
 
            // Создаём поле
-           const createBoard = () => Array.from({ length: ROWS }, () => Array(COLS).fill(0));
+           const createBoard = () => Array.from({ length: ROWS }, () => Array(COLS).fill(0);
 
            let board = createBoard();
 
